styled the tabs and fixed the layout on IE7

--- a/wp-content/themes/govintranetpress/css/ie.css
+++ b/wp-content/themes/govintranetpress/css/ie.css
@@ -286,8 +286,5 @@
 
 /* line 2, ../scss/ie/_need_to_know.scss */
 .ie7 .news-widget.need-to-know .page-list {
-  margin-left: 0; }
-  /* line 5, ../scss/ie/_need_to_know.scss */
-  .ie7 .news-widget.need-to-know .page-list .page {
-    display: inline;
-    zoom: 1; }
+  margin-left: 0;
+  zoom: 1; }
