--- a/wp-content/themes/govintranetpress/scss/ie/_need_to_know.scss
+++ b/wp-content/themes/govintranetpress/scss/ie/_need_to_know.scss
@@ -1,10 +1,6 @@
 .ie7 .news-widget.need-to-know {
   .page-list {
     margin-left: 0;
-
-    .page {
-      display: inline;
-      zoom: 1;
-    }
+    zoom: 1;
   }
 }
